--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
   "require": {
     "silex/silex": "1.3.*@dev",
     "firebase/php-jwt": "^3.0",
-    "doctrine/couchdb": "^1.0@beta"
+    "doctrine/couchdb": "^1.0@beta",
+    "monolog/monolog": "^1.21"
   }
 }
