--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,6 @@
       "email": "gonzalo123@gmail.com"
     }
   ],
-  
   "autoload": {
     "psr-4": {
       "G\\Bck\\": "src/",
@@ -19,7 +18,7 @@
     }
   },
   "require": {
-    "silex/silex": "1.3.*@dev",
+    "silex/silex": "^2.0",
     "firebase/php-jwt": "^3.0"
   }
 }
