--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
       "email": "gonzalo123@gmail.com"
     }
   ],
-  "minimum-stability": "dev",
+  "minimum-stability": "stable",
   "autoload": {
     "psr-4": {
       "G\\Bck\\": "src/",
