--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,12 @@
       "email": "gonzalo123@gmail.com"
     }
   ],
-  "minimum-stability": "stable",
+  "minimum-stability": "dev",
+  "extra": {
+    "branch-alias": {
+      "dev-master": "1.0-dev"
+    }
+  },
   "autoload": {
     "psr-4": {
       "G\\Bck\\": "src/",
